--- a/Client/Styles/index.styl
+++ b/Client/Styles/index.styl
@@ -1,2 +1,9 @@
+@import '~bootstrap3/dist/css/bootstrap.css';
+
+#content
+  width 100%
+  height 100%
+  position absolute
+  
 .main-container
-  color blue
+  height 100%
